# datafly

./: .env  .env.example  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
datafly/: __init__.py  cli.py  config.py  gateway.py
datafly/adapters/: base.py  bigquery.py  dynamodb.py  factory.py  hubspot.py  mongo.py  postgres.py  redshift.py  salesforce.py  snowflake.py
datafly/api/: mcp.py  server.py
datafly/context/: agent.py  store.py
docker/: entrypoint.sh  init.sql
examples/: quickstart.py  sample_context.yaml
tests/: test_core.py
ui/: index.html
